--- a/WarehouseEcommerce/Views/Theme/University/Products/_RelatedProducts.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_RelatedProducts.cshtml
@@ -31,6 +31,10 @@
                                     <ul class="icolist">
                                         <li>
                                             <a class="prd_amnt" href="@Url.Action("ProductDetails", "Products", new { sku = relatedProduct.SKUCode })">
+                                                @if (relatedProduct.ProductType == ProductKitTypeEnum.Grouped)
+                                                {
+                                                    <span class="price-from__text">from </span>
+                                                }
                                                 @ViewBag.CurrencySymbol@relatedProduct.SellPrice
                                             </a>
                                         </li>
