--- a/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
@@ -49,13 +49,15 @@
             }
             </div>
         <div class="row">
-            @Html.Partial("_DynamicFilters", Model.DynamicFilters)
+            <div class="col-md-4 col-lg-3 col-xl-2">
+                @Html.Partial("_DynamicFilters", Model.DynamicFilters)
+            </div>
             <div class="col-md-8 col-lg-9 col-xl-10 list-on-tablets">
                 <div class="nb_prd_listing_wrap">
                     <div class="row list-product-row">
                         @if (Model.Products == null || Model.Products?.Count() <= 0)
                         {
-                            foreach (var item in Model.DynamicFilters.WebsiteNavigationCategories)
+                            foreach (var item in Model.DynamicFilters.Categories)
                             {
                                 <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4  col-xl-3 list-product-col">
                                     <div class="prd_lst_boxouter">
@@ -98,19 +100,19 @@
                                         }
 
                                         <span class="imagewrap">
-                                            <a href="@Url.Action("ProductDetails", "Products", new { sku = item.SKUCode })">
+                                            <a href="@Url.Action("ProductDetails", "Products", new { sku = item.SKUCode, filters = Model.CurrentFilterValues })">
                                                 <img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath + item.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" />
                                             </a>
                                         </span>
                                         <h3 class="prdName">
-                                            <a class="prdName" href="@Url.Action("ProductDetails", "Products", new { sku = item.SKUCode })">
+                                            <a class="prdName" href="@Url.Action("ProductDetails", "Products", new { sku = item.SKUCode, filters = Model.CurrentFilterValues })">
                                                 @item.Name
                                             </a>
                                         </h3>
                                         <div class="foot">
                                             <ul class="icolist">
                                                 <li>
-                                                    <a class="prd_amnt" href="@Url.Action("ProductDetails", "Products", new { sku = item.SKUCode })">
+                                                    <a class="prd_amnt" href="@Url.Action("ProductDetails", "Products", new { sku = item.SKUCode, filters = Model.CurrentFilterValues })">
                                                         @if (item.ProductType == ProductKitTypeEnum.Grouped)
                                                         {
                                                             <span class="price-from__text">from </span>
