--- a/WMS/Views/Theme/Modern/PurchaseOrders/BlindShipment.cshtml
+++ b/WMS/Views/Theme/Modern/PurchaseOrders/BlindShipment.cshtml
@@ -22,7 +22,7 @@
     function OnStartCallback(s, e) {
         var department = $(".drpPD").val();
         var group = $(".drpPG").val();
-        var category = $(.drpPC).val();
+        var category = $(".drpPC").val();
         e.customArgs["ProductDepartment"] = department;
         e.customArgs["ProductGroup"] = group;
         e.customArgs["ProductCategory"] = category;
